fix ios flexbox problem and some layout problems

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,6 +1,7 @@
 .header {
   display: block;
   text-align: center;
+  padding: 0 0 16px 0;
 }
 
 .header ul {
