--- a/src/styles/home/activities.module.css
+++ b/src/styles/home/activities.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   flex-shrink: 0;
   box-shadow: 1px 0 4px 1px gray;
+  max-width: 380px;
 }
 .activity .description {
   color: darkgray;
@@ -13,6 +14,7 @@
 }
 
 .activity p {
+  color: black;
   margin-left: 0;
   margin-top: 0;
   margin-right: 0;
@@ -31,6 +33,7 @@
 }
 
 .activity:hover,
+.activity:hover p,
 .activity:hover .description {
   color: white;
 }
